# Fever

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  LICENSE.txt  README.md  build.sh  buildc.sh  buildc_xcode.sh
cmake/modules/: FindGLM.cmake  FindSDL2.cmake  FindSTB.cmake  FindSTBImage.cmake  FindTinyObj.cmake
src/: CMakeLists.txt
src/FeverLibrary/: CMakeLists.txt
src/FeverLibrary/include/Fever/: Fever.h  Fever2.h  FeverConstants.h  FeverDebugInternal.h  FeverMetalWrapper.h  FeverPlatform.h  FeverSurfaceAcquisition.h  Handle.h  HandleDataStore.h  HandleDataStore.hpp  PersistentHandleDataStore.h  PersistentHandleDataStore.hpp  Sample.h  fever_constants.h  fever_private.h
src/FeverLibrary/include/Fv/: fever.h  fever_constants.h
src/FeverLibrary/src/: FeverMetalBackend.mm  FeverMetalWrapper.mm  Handle.cpp  Sample.c  Sample.cpp
src/FeverLibrary/test/: TestHandle.h  test.cpp
src/app/: CMakeLists.txt
src/app/src/: app.cpp
src/projects/app/: .clang_complete  CMakeLists.txt
src/projects/app/assets/: hello-ubos.metal  hello-vertex-buffers.metal  hello.metal
src/projects/app/src/: app.c  app.cpp  osx.h  osx.mm
src/projects/cubemap/: CMakeLists.txt
src/projects/cubemap/assets/: cubemap.metal  skybox.metal
src/projects/cubemap/src/: cubemap.cpp
src/projects/pbr-basic/: CMakeLists.txt
src/projects/pbr-basic/assets/: cubemap.metal  skybox.metal
src/projects/pbr-basic/src/: pbr-basic.cpp
src/projects/sdl-mtl/: CMakeLists.txt
src/projects/sdl-mtl/src/: main.mm
src/projects/textureMapping/: CMakeLists.txt
src/projects/textureMapping/assets/: texture.metal
src/projects/textureMapping/src/: textureMapping.cpp
src/projects/triangle/: CMakeLists.txt
src/projects/triangle/assets/: triangle.metal
src/projects/triangle/src/: triangle.cpp
